# AdaptiveUI

./: README.md  pyproject.toml
data/story/: story.md
src/adaptiveui/: ui.py
src/adaptiveui/modules/: config.py  exceptions.py  log.py  server.py  toggle_var.py  utils.py
tests/: adaptiveui_test.py
