[tool.poetry]
name = "adaptiveui"
version = "0.1.0"
description = ""
authors = ["EpicGamerCodes <62027082+EpicGamerCodes@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "adaptiveui", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pillow = "^10.2.0"
sv-ttk = "2.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
